Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
Cheshire-Cat
-
Untriaged
-
1
-
Unknown
Description
The developer experience for logging exceptions to the Application log (MB-31920) is poor.
Right now when in a dev cycle working on a new script it is a bit perplexing when you wait on average 30 seconds (and up to 60 seconds) to see the exception (along with a count) be emitted.
- We could always the very first message, i.e. count===1 immediately the first time we see the exception after any deployment or any resume.
- Then we fall back to the current behaviour of summarization only on count === 2-N ( or minute two+ on 1-N) summarize and emit once per minute.
This would speed up initial debug feedback to the developer for quicker understanding of the issue and still limit overwhelming logging.
Attachments
Issue Links
- backports to
-
MB-47867 [BP MB-45874 7.0.2] - Always emit the first exception to the application log then summarize
-
- Closed
-
For Gerrit Dashboard: MB-45874 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
152072,1 | MB-45874: New exceptions once every logging period by each thread | unstable | eventing | Status: ABANDONED | 0 | 0 |
159192,2 | MB-45874: New exceptions once every logging period by each thread | unstable | eventing | Status: MERGED | +2 | +1 |
159402,2 | MB-45874: New exceptions once every logging period by each thread | cheshire-cat | eventing | Status: MERGED | +2 | +1 |
Jeelan Poola, Jon Strabala:
Made changes to accommodate this. Logs will appear as listed below:
The "Doc created/updated" msg will appear if such a log call is present in the App / Function, not otherwise.
A couple comments:
Thanks!