MB-45874: New exceptions once every logging period by each thread

Change-Id: If2d4886d68be7ee4e1281e3b32afef6f2f014d63
Reviewed-on: http://review.couchbase.org/c/eventing/+/159192
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Reviewed-by: CI Bot
Tested-by: Srini Raman <srinivasan.raman@couchbase.com>